--- a/example/package.json
+++ b/example/package.json
@@ -3,9 +3,6 @@
   "name": "quagga",
   "version": "0.12.1",
   "description": "An advanced barcode-scanner written in JavaScript",
-  "script": {
-    "start": "node dist/quagga.js"
-  },
   "browser": "dist/quagga.min.js",
   "devDependencies": {
     "async": "^1.4.2",
@@ -70,6 +67,7 @@
     "doc": "doc"
   },
   "scripts": {
+    "start": "node lib/quagga.js",
     "test": "cross-env BABEL_ENV=commonjs grunt test",
     "integrationtest": "grunt integrationtest",
     "build:dev": "cross-env BUILD_ENV=development webpack",
