--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "start": "node server.js",
+  "start": "start http://localhost:1234",
   "name": "quagga",
   "version": "0.12.1",
   "description": "An advanced barcode-scanner written in JavaScript",
@@ -67,7 +67,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "start": "node lib/quagga.js",
+    "start": "npm run build && npm run dev && npm run open",
+    "open": "start http://localhost:1234/build/live_w_locator.html", 
     "test": "cross-env BABEL_ENV=commonjs grunt test",
     "integrationtest": "grunt integrationtest",
     "build:dev": "cross-env BUILD_ENV=development webpack",
