--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "main": "lib/quagga.js",
   "typings": "type-definitions/quagga.d.ts",
   "browser": "dist/quagga.min.js",
-  "typings": "type-definitions/quagga.d.ts",
   "devDependencies": {
     "async": "^1.4.2",
     "babel-cli": "^6.5.1",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
-    "babel-istanbul": "^0.8.0",
-    "babel-istanbul-loader": "^0.1.0",
-    "babel-loader": "^6.2.10",
+    "babel-istanbul": "^0.12.2",
+    "babel-istanbul-loader": "^0.0.1",
+    "babel-loader": "^9.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-check-es2015-constants": "^6.3.13",
     "babel-plugin-lodash": "^3.2.11",
@@ -40,27 +39,28 @@
     "chai": "^3.4.1",
     "core-js": "^2.4.1",
     "cross-env": "^3.1.4",
-    "eslint": "^1.10.3",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-nodeunit": "^0.4.1",
-    "grunt-karma": "^2.0.0",
-    "isparta-loader": "^2.0.0",
-    "karma": "^1.3.0",
+    "eslint": "^8.34.0",
+    "grunt": "^1.6.1",
+    "grunt-cli": "^1.4.3",
+    "grunt-contrib-nodeunit": "^4.0.0",
+    "grunt-karma": "^4.0.2",
+    "install": "^0.13.0",
+    "isparta-loader": "^1.0.0",
+    "karma": "^6.4.1",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^0.1.7",
     "karma-mocha": "~0.2.0",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-sinon": "^1.0.4",
     "karma-source-map-support": "^1.1.0",
-    "karma-webpack": "^1.8.1",
+    "karma-webpack": "^5.0.0",
     "lolex": "^1.4.0",
-    "mocha": "^2.3.2",
+    "mocha": "^10.2.0",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "webpack": "^2.2.1",
+    "webpack": "^5.75.0",
     "webpack-sources": "^0.1.4"
   },
   "directories": {
